# Raze

./: .gitattributes  .gitignore  AUTHORS.md  Android.mk  AppImageBuilder.yml  CMakeLists.txt  Common.mak  GNUmakefile  README.md  _clang-format  auto-setup-linux.sh  auto-setup-windows-arm.cmd  auto-setup-windows.cmd  l
jit/: bcsave.lua
libraries/enet/: CMakeLists.txt
libraries/libtess/: CMakeLists.txt
libraries/libtess/Source/: sweep.c
source/: CMakeLists.txt  g_pch.h  polymost1Frag.glsl.cpp  polymost1Vert.glsl.cpp  sdlappicon.cpp  version.h
source/audiolib/include/: al_midi.h  drivers.h  fx_man.h  midi.h  midifuncs.h  mpu401.h  multivoc.h  music.h  opl3.h  opl3_reg.h  oplmidi.h  sndcards.h
source/audiolib/src/: _al_midi.h  _midi.h  _multivc.h  _oplmidi.h  driver_adlib.cpp  driver_adlib.h  driver_directsound.cpp  driver_directsound.h  driver_nosound.cpp  driver_nosound.h  driver_sdl.cpp  driver_sdl.h  driver_winmm.cpp  driver_winmm.h  drivers.cpp  flac.cpp  formats.cpp  fx_man.cpp  gmtimbre.cpp  linklist.h  ll.h  midi.cpp  midi.h  mix.cpp  mixst.cpp  mpu401.cpp  multivoc.cpp  music.cpp  music_external.cpp  opl3.cpp  pitch.cpp  pitch.h  sdlmusic.cpp  vorbis.cpp  xa.cpp  xmp.cpp
source/blood/: CMakeLists.txt  Dependencies.mak
source/blood/rsrc/: eduke32_icon.c  eduke32_icon_32px.c  gameres.rc  manifest.build.xml  manifest.game.xml
source/blood/src/: _functio.h  actor.cpp  actor.h  ai.cpp  ai.h  aibat.cpp  aibat.h  aibeast.cpp  aibeast.h  aiboneel.cpp  aiboneel.h  aiburn.cpp  aiburn.h  aicaleb.cpp  aicaleb.h  aicerber.cpp  aicerber.h  aicult.cpp  aicult.h  aigarg.cpp  aigarg.h  aighost.cpp  aighost.h  aigilbst.cpp  aigilbst.h  aihand.cpp  aihand.h  aihound.cpp  aihound.h  aiinnoc.cpp  aiinnoc.h  aipod.cpp  aipod.h  airat.cpp  airat.h  aispid.cpp  aispid.h  aistate.h  aitchern.cpp  aitchern.h  (+134 more)
source/common/: animlib.cpp  compositesaveame.h  compositesavegame.cpp  gameconfigfile.cpp  gameconfigfile.h  gamecontrol.cpp  gamecontrol.h  gamecvars.cpp  gamecvars.h  gamemain.cpp  i_specialpaths.h  initfs.cpp  inputstate.cpp  inputstate.h  keyboard.h  mapinfo.h  ns.h  openaudio.cpp  openaudio.h  quotemgr.h  quotes.cpp  rts.cpp  rts.h  savegamehelp.cpp  savegamehelp.h  screenshot.cpp  searchpaths.cpp  secrets.cpp  secrets.h  serializer.cpp  serializer.h  st_start.h  statistics.cpp  statistics.h  version.h
source/common/2d/: drawparms.h  renderstyle.h  screentext.cpp  screentext.h  v_2ddrawer.cpp  v_2ddrawer.h  v_draw.cpp  v_draw.h  v_drawtext.cpp  v_text.h
source/common/console/: c_bind.cpp  c_bind.h  c_buttons.cpp  c_buttons.h  c_commandbuffer.h  c_commandline.h  c_con.cpp  c_console.cpp  c_console.h  c_cvars.cpp  c_cvars.h  c_dispatch.cpp  c_dispatch.h  c_enginecmds.cpp  d_event.cpp  d_event.h  keydef.h
source/common/cutscenes/: movieplayer.cpp  playmve.cpp  screenjob.cpp
source/common/dobject/: __autostart.cpp  autosegs.h  dobject.cpp  dobject.h  dobjtype.cpp  dobjtype.h  zzautozend.cpp
source/common/engine/: d_event.cpp  files.h  i_interface.cpp  i_interface.h  i_net.cpp  i_net.h  m_random.cpp  m_random.h  namedef.h  palettecontainer.cpp  palettecontainer.h  printf.h  sc_man.cpp  sc_man.h  serializer.cpp  serializer.h  startupinfo.h  stats.cpp  stringtable.cpp  stringtable.h
source/common/filesystem/: cache.cpp  file_7z.cpp  file_directory.cpp  file_grp.cpp  file_lump.cpp  file_pak.cpp  file_rff.cpp  file_wad.cpp  file_zip.cpp  file_zip.h  files.cpp  filesystem.cpp  filesystem.h  fs_findfile.cpp  resourcefile.cpp  resourcefile.h
source/common/fonts/: font.cpp  fontchars.cpp  fontchars.h  hexfont.cpp  singlelumpfont.cpp  singlepicfont.cpp  specialfont.cpp  v_font.cpp  v_font.h  v_text.cpp  v_text.h
source/common/input/: i_gui.cpp  i_input.cpp  input.cpp  input.h  m_joy.cpp
source/common/menu/: imagescroller.cpp  joystickmenu.cpp  listmenu.cpp  loadsavemenu.cpp  menu.cpp  menu.h  menudef.cpp  menuinput.cpp  messagebox.cpp  optionmenu.cpp  optionmenuitems.h  readthis.cpp  resolutionmenu.cpp  savegamemanager.cpp
source/common/models/: model.cpp  model.h  model_kvx.h  models_md2.cpp  models_md3.cpp  models_voxel.cpp  voxels.h
source/common/music/: i_music.cpp  i_music.h  i_soundfont.cpp  i_soundfont.h  music.cpp  music_config.cpp  music_midi_base.cpp  musicstream.cpp  s_advsound.cpp  s_music.h  z_music.h
source/common/objects/: __autostart.cpp  autosegs.h  dobject.cpp  dobject.h  dobjgc.cpp  dobjgc.h  dobjtype.cpp  dobjtype.h  zzautozend.cpp
source/common/optionmenu/: optionmenu.cpp
source/common/rendering/: i_modelvertexbuffer.h  r_thread.h  r_videoscale.cpp  r_videoscale.h  v_framebuffer.cpp  v_video.cpp  v_video.h
source/core/: actorinfo.cpp  actorinfo.h  actorlist.cpp  am_map.cpp  am_map.h  animlib.cpp  animlib.h  automap.cpp  automap.h  binaryangle.cpp  binaryangle.h  cheathandler.cpp  cheathandler.h  cheats.cpp  cheats.h  codegen_raze.cpp  codegen_raze.h  colormaps.h  compositesaveame.h  coreactor.h  coreplayer.cpp  coreplayer.h  ct_chat.cpp  d_net.cpp  d_net.h  d_protocol.cpp  d_protocol.h  d_ticcmd.h  def_.cpp  defparser.cpp  entercheat.cpp  fixedhorizon.h  g_mapinfo.cpp  g_mapinfo.h  gameconfigfile.cpp  gameconfigfile.h  gamecontrol.cpp  gamecontrol.h  gamecvars.cpp  gamecvars.h  (+83 more)
source/duke/: CMakeLists.txt
source/duke3d/: CMakeLists.txt  Dependencies.mak
source/dukerr/: actors.h  common_game.h  events_defs.h  macros.h  namesdyn.cpp  namesdyn.h  quotes.h  soundsdyn.cpp  soundsdyn.h
source/exhumed/: CMakeLists.txt
source/glad/: README.TXT
source/glbackend/: gl_buffers.cpp  gl_hwtexture.cpp  gl_hwtexture.h  gl_models.cpp  gl_models.h  gl_palmanager.cpp  gl_renderstate.h  gl_samplers.cpp  gl_samplers.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_uniform.h  glbackend.cpp  glbackend.h  hw_draw2d.cpp  pm_renderstate.h
source/launcher/: launcherwindow.cpp  launcherwindow.h  settingspage.cpp
source/libxmp-lite/: README
source/lpeg/: Dependencies.mak  LICENSE.txt
source/rr/: CMakeLists.txt  Dependencies.mak
source/sw/: CMakeLists.txt  Dependencies.mak
source/zmusic/: s_music.cpp
tools/lemon/: CMakeLists.txt  lemon.c
(+6171 files in other folders)
